[project]
name = "topologylosses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "monai>=1.5.2",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "panel>=1.8.10",
    "pixi>=1.0.1",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "thop>=0.1.1",
    "tifffile>=2025.5.10",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
